# stockagent

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  fundamentals.md
src/: main.py
src/data/: collector.py  schemas.py
src/fundamentals/: profitability.py
src/stockagent/: app.py  cli.py  config.py  errors.py
src/stockagent/data/: errors.py
src/stockagent/data/providers/: __init__.py  base.py  edgar.py
src/stockagent/financials/: __init__.py  models.py
src/stockagent/fundamentals/: __init__.py  cash_flow.py  financial_health.py  growth.py  inputs.py  profitability.py
src/stockagent/report/: builder.py  generator.py  writer.py
tests/: test_app.py  test_cli.py
tests/data/providers/: test_edgar.py
tests/fundamentals/: test_cash_flow.py  test_financial_health.py  test_growth.py  test_profitability.py
tests/report/: test_builder.py  test_generator.py  test_writer.py
