[project]
name = "stock"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "curl_cffi>=0.15",
    "edgartools>=5.35.1",
]

[project.scripts]
stock = "stockagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stockagent"]
